# Invox

./: .gitignore  README.md  start-local.sh
contracts/: Anchor.toml
contracts/programs/employee-registry/: Cargo.toml
contracts/programs/employee-registry/src/: lib.rs
contracts/programs/invoice-registry/: Cargo.toml
contracts/programs/invoice-registry/src/: lib.rs
contracts/programs/multisig-approver/: Cargo.toml
contracts/programs/multisig-approver/src/: lib.rs
contracts/programs/proof-verifier/: Cargo.toml
contracts/programs/proof-verifier/src/: lib.rs
contracts/programs/reimbursement-nft/: Cargo.toml
contracts/programs/reimbursement-nft/src/: lib.rs
contracts/programs/spending-analytics/: Cargo.toml
contracts/programs/spending-analytics/src/: lib.rs
contracts/programs/treasury/: Cargo.toml
contracts/programs/treasury/src/: lib.rs
contracts/programs/vendor-registry/: Cargo.toml
contracts/programs/vendor-registry/src/: lib.rs
contracts/programs/zvoice/: Cargo.toml
contracts/programs/zvoice/src/: lib.rs
contracts/tests/: employee-registry.ts  invoice-registry.ts  multisig-approver.ts  proof-verifier.ts  reimbursement-nft.ts  spending-analytics.ts  vendor-registry.ts  zvoice.ts
web/: next.config.ts  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/employee/: page.tsx
web/src/components/: InvoiceTable.tsx  PaymentModal.tsx  SolanaProvider.tsx  WalletConnect.tsx
web/src/lib/: contract.ts  ephemeral.ts  gmail.ts  payments.ts  tokens.ts
(+15 files in other folders)
